# cmake-helpers

./: .gitignore  LICENSE  README.md  commit.msg
cmake/Modules/: arduino_project.cmake  arduino_subproject.cmake  avr_project.cmake  ctpp2.cmake  ctpp2_model.cmake  doxygen.cmake  doxygen.conf.in  esp32_project.cmake  firmware.cmake  freertos.cmake  gcc_avr_toolchain.cmake  gcc_stm32_toolchain.cmake  generic-gcc-avr.cmake  gtest.cmake  init.cmake  libopencm3.cmake  logger.cmake  main_project.cmake  project_download.cmake.in  project_setup.cmake  stm32_project.cmake  stm32f103c8t6.cmake  test_project.cmake  unit_testing.cmake  x86_project.cmake
example/: CMakeLists.txt  make.sh
example/src/ard/: CMakeLists.txt
example/src/avr/: CMakeLists.txt  main.cpp
example/src/common/: example.cpp  example.hpp
example/src/esp32/: CMakeLists.txt  main.cpp
example/src/stm32/: CMakeLists.txt  FreeRTOSConfig.h  main.cpp  opencm3.c
example/src/x86/: CMakeLists.txt  example.cpp  example.hpp  main.cpp
example/test/: CMakeLists.txt  example_test.cpp  test_example.cpp
